# hs-aws-lambda

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  aws-lambda.cabal
src/Aws/: Lambda.hs
src/Aws/Lambda/: Constraints.hs  Core.hs  Types.hs
src/Aws/Lambda/Commands/: AddEventSource.hs  DeleteFunction.hs  GetEventSource.hs  GetFunction.hs  GetFunctionConfiguration.hs  InvokeAsync.hs  ListEventSources.hs  ListFunctions.hs  RemoveEventSource.hs  UpdateFunctionConfiguration.hs  UploadFunction.hs
src/Aws/Lambda/Internal/: Constraints.hs  Utils.hs
