name:                aws-lambda
version:             0.1.0.0
synopsis:            Haskell bindings for AWS Lambda
license:             Apache-2.0
license-file:        LICENSE
author:              Jon Sterling
maintainer:          jon@jonmsterling.com
copyright:           Copyright (c) 2013-2014 PivotCloud, Inc.
category:            Network, Cloud
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Aws.Lambda.Core
  build-depends:       base >=4.7 && <4.8,
                       base-unicode-symbols,
                       aws >=0.10.5,
                       aws-general >=0.1,
                       base16-bytestring >=0.1.1.6,
                       byteable >=0.1.1,
                       bytestring >= 0.10.4.0,
                       case-insensitive >=1.2.0.1,
                       cryptohash >=0.11.6,
                       http-types >=0.8.5,
                       http-conduit >=2.1.5,
                       parsers >=0.11,
                       text >=1.2.0.0
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
